--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^24.3.0"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
     "nodemailer": "^7.0.5",
     "xlsx": "^0.18.5"
   }
