--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,11 +28,20 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
+        cache: 'npm'
+        
+    - name: Cache Playwright browsers
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/ms-playwright
+        key: ${{ runner.os }}-playwright-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-playwright-
         
     - name: Install dependencies
       run: |
-        npm install
-        npx playwright install chromium
+        npm ci
+        npx playwright install chromium --with-deps
         
     - name: Auto-Start 24/7 PIR Testing (on push)
       if: github.event_name == 'push'
