Implement Goals 3-5: Timezone support, away from home handling, and fix parallel execution duplicates

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,19 @@
-# Email Configuration for Hourly Reports
-# Copy this file to .env and update with your actual email credentials
+# # Email Configuration for Hourly Reports
+# # Copy this file to .env and update with your actual email credentials
 
-# Gmail Configuration (recommended)
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+# # Gmail Configuration (recommended)
+# EMAIL_USER=your-email@gmail.com
+# EMAIL_PASS=your-app-password
 
-# Report Recipients (comma-separated for multiple emails)
-REPORT_EMAIL=recipient1@example.com,recipient2@example.com
+# # Report Recipients (comma-separated for multiple emails)
+# REPORT_EMAIL=recipient1@example.com,recipient2@example.com
 
-# Alternative Email Services:
-# For Outlook: Use 'outlook' as service
-# For Yahoo: Use 'yahoo' as service
-# For custom SMTP: Configure host, port, secure in email_reporter.js
+# # Timezone Configuration (Charli's timezone)
+# # Supports: -4, -5, -6, -7, -8, -9, -10 or IANA zones like America/Toronto
+# # Leave empty to use system timezone
+# TIME_ZONE=-4
+
+# # Alternative Email Services:
+# # For Outlook: Use 'outlook' as service
+# # For Yahoo: Use 'yahoo' as service
+# # For custom SMTP: Configure host, port, secure in email_reporter.js
